# sigscan

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  release-plz.toml
.github/workflows/: build-and-upload-after-release.yml  build.yml  release-plz.yml
src/: cli.rs  main.rs
