[package]
name = "sigscan"
version = "0.1.0"
description = "List POSIX signal information about all processes on a host using Linux procfs"
edition = "2024"
authors = ["Brannon Dorsey <brannon@brannondorsey.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/brannondorsey/sigscan"
keywords = ["linux", "process", "signal", "posix"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = [".github/*"]

[dependencies]
clap = { version = "4.5.36", features = ["derive", "wrap_help"] }
libc = "0.2.171"
nix = { version = "0.29.0", features = ["signal"] }
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
procfs = "0.17.0"

[profile.profile]
inherits = "release"
debug = true
strip = false
